crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_transition_ambiguous_to_published.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: steps
---
[
    "initial: Ambiguous { message: \"upload timeout\" }",
    "after verification: Published",
]
