crates/shipper-execution-core/src/snapshots/shipper_execution_core__tests__snapshots__snapshot_transition_pending_to_failed_retry_to_published.snap
---
source: crates/shipper-execution-core/src/lib.rs
expression: steps
---
[
    "initial: Pending",
    "after failure: Failed { class: Retryable, message: \"rate limited\" }",
    "after retry reset: Pending",
    "after upload: Uploaded",
    "after publish: Published",
]
